Fix menu styling on mobile for inverted pages.

--- a/styles/1_header.styl
+++ b/styles/1_header.styl
@@ -62,12 +62,13 @@
           background -webkit-linear-gradient(top, #ccc, #eee)
           color #555
 
-.inverted #header
-  li
-    a
-      color white
-    a:hover
-      color qColor
+@media (min-width: 481px)
+  .inverted #header
+    li
+      a
+        color white
+      a:hover
+        color qColor
 
 #buttons
   position absolute
@@ -126,6 +127,11 @@
     border-radius 8px
     &:active
       transform scale(0.9)
+
+.inverted #mobile-menu-icon
+  @media (max-width: 480px)
+    color white
+    border-color white
 
 @media (min-width 481px)
   nav > .q42-logo
